<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/iv_discover_avatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/ic_baseline_image_24" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_discover_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/title"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_discover_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone" />

        <TextView
            android:id="@+id/tv_discover_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/price" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_discover_book"
            android:layout_width="49dp"
            android:layout_height="26dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/corners"
            android:backgroundTint="@color/defaultColor"
            android:text="@string/book"
            android:textColor="@color/white" />


    </LinearLayout>



</LinearLayout>