<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bacpic2"
    android:textAlignment="viewStart"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="73dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="30dp"
        android:autoSizeTextType="none"
        android:contentDescription="@string/app_name"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/tenantfinder"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textDirection="anyRtl"
        android:textSize="55sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/roboto"
        android:text="@string/find_unique_places_that_makes_you_feel_at_home"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="110dp"
        android:layout_height="46dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/button_color"
        android:fontFamily="@font/roboto"
        android:text="@string/landlord"
        android:textAllCaps="false"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_color"
        android:fontFamily="@font/roboto"
        android:text="@string/tenant"
        android:textAllCaps="false"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button3"
        android:layout_width="93dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/roboto"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.962"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>