<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TenantMyRoomFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="369dp"
            android:layout_height="66dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/input_rounded_corners"
            android:fontFamily="@font/roboto"
            android:paddingTop="15dp"
            android:text="@string/details"
            android:textAlignment="center"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/room_descript"
            android:layout_width="377dp"
            android:layout_height="86dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/roboto"
            android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua"
            android:textAlignment="textStart"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/roboto"
            android:text="@string/room"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.107"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/room_descript" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="68dp"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto"
            android:text="@string/price"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.11"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="35dp"
            android:layout_height="18dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto"
            android:text="@string/rate"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.105"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView18"
            app:layout_constraintVertical_bias="0.037" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>