<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".landlord_form_activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/lndname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="4dp"
            android:autofillHints="@string/username"
            android:background="@drawable/input_rounded_corners"
            android:drawableStart="@drawable/ic_person_user"
            android:drawablePadding="2dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="10dp"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/lndEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="40dp"
            android:autofillHints="@string/email"
            android:background="@drawable/input_rounded_corners"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="2dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/landlord_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="4dp"
            android:autofillHints="@string/phone_number"
            android:background="@drawable/input_rounded_corners"
            android:drawableStart="@drawable/ic_baseline_phone_android_24"
            android:drawablePadding="2dp"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:padding="10dp"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/lndPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="4dp"
            android:autofillHints="@string/password"
            android:background="@drawable/input_rounded_corners"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="2dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/lnd_confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="4dp"
            android:autofillHints="@string/re_enter_password"
            android:background="@drawable/input_rounded_corners"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="2dp"
            android:ems="10"
            android:hint="@string/re_enter_password"
            android:inputType="textPassword"
            android:padding="10dp"
            tools:ignore="TouchTargetSizeCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signup_send_request_lnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/input_rounded_corners"
            android:backgroundTint="@color/defaultColor"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="5dp"
                android:text="@string/are_you_a_tenant"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/signUpredirect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="40dp"
                android:clickable="true"
                android:onClick="onClickSignUp"
                android:text="@string/sign_up_here"
                android:textColor="@color/defaultColor"
                android:textSize="18sp"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>