<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Landlord">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:text="@string/welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#ff9900"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.362"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="348dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/to_let_you_manage_your_places_this_area_helps_you_do_that_click_on_the_preferred_option_below_to_get_started"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

    </LinearLayout>






    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:clickable="true"
        android:fontFamily="@font/roboto"
        android:onClick="onClick"
        android:text="@string/add_places"
        android:gravity="start|center"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/dd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:clickable="true"
        android:fontFamily="@font/roboto"
        android:gravity="start|center"
        android:onClick="onClickTwo"
        android:text="@string/remove_tenant_place"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/delete_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:clickable="true"
        android:drawablePadding="2dp"
        android:fontFamily="@font/roboto"
        android:gravity="start|center"
        android:onClick="onClickThree"

        android:text="@string/notification_s"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/notification_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button5"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/input_rounded_corners"
        android:backgroundTint="@color/defaultColor"
        android:fontFamily="@font/roboto"
        android:text="@string/log_out"
        android:onClick="goBack"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

</androidx.constraintlayout.widget.ConstraintLayout>