<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logpic"
    tools:context=".Login">

<!--    <ImageView-->
<!--        android:id="@+id/imageView13"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:scaleType="fitXY"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:srcCompat="@drawable/logpic" />-->

    <ImageView
        android:contentDescription="@string/todo"
        android:id="@+id/imageView12"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="11dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_account_circle_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="50dp"
        android:layout_marginTop="103dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="270dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/tnt_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:autofillHints="Username"
            android:background="@drawable/input_rounded_corners"
            android:drawableStart="@drawable/ic_person_user"
            android:drawablePadding="2dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <EditText
            android:autofillHints="@string/password"
            android:id="@+id/tntPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/input_rounded_corners"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="2dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_tenant_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/input_rounded_corners"
            android:backgroundTint="@color/defaultColor"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>